kubernetes/apps/base/observability/exporters/blackbox-exporter/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
spec:
  hostnames: ["${SUBDOMAIN}${SUBDOMAIN_SUFFIX}.jory.dev"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: blackbox-exporter
          namespace: observability
          port: 9115
